// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDiscussPhasePrompt > falls back to (nezadán) when phase has no goal 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **diskusní session** o nadcházející fázi — NEIMPLEMENTUJ nic.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Fáze k diskusi
**Fáze 5: Refactor auth**
Cíl: (nezadán)

# Tvůj úkol
Prodiskutuj s uživatelem záměr této fáze. Tvým cílem je:
- pochopit, co má fáze přesně řešit a proč
- upozornit na nejasnosti, skryté předpoklady nebo rizika
- navrhnout, jak by mohl vypadat cíl nebo kroky (pokud nejsou zadané nebo jsou vágní)

Smíš číst soubory projektu (Read, Grep, Glob). Kromě souboru s poznámkami (viz níže) nic jiného nezapisuj — session je jinak jen pro diskusi.

Začni stručným shrnutím, co cíl fáze znamená, a pak se zeptej na to, co je nejasné nebo co považuješ za klíčové upřesnit.

# Poznámky z diskuse
Než session ukončíš, zapiš přes Write tool shrnutí diskuse do souboru \`.mini/discuss/phase-5.md\`. Teprve potom session ukonči.

Soubor musí mít tuto strukturu (názvy sekcí jsou fixní; jednotlivé sekce smí být prázdné nebo úplně chybět, pokud k nim není co napsat):

\`\`\`
# Fáze 5 — Refactor auth

## Záměr
## Klíčová rozhodnutí
## Pozor na
\`\`\`

Soubor slouží jako kontext pro následující kroky workflow (\`mini plan\`, \`mini do\`), které samotnou diskusi neuvidí. Piš věcně a stručně — jen to, co je pro další práci podstatné.
"
`;

exports[`buildDiscussPhasePrompt > omits steps block when phase has no steps 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **diskusní session** o nadcházející fázi — NEIMPLEMENTUJ nic.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Fáze k diskusi
**Fáze 2: Bootstrap**
Cíl: CLI vrací --version

# Tvůj úkol
Prodiskutuj s uživatelem záměr této fáze. Tvým cílem je:
- pochopit, co má fáze přesně řešit a proč
- upozornit na nejasnosti, skryté předpoklady nebo rizika
- navrhnout, jak by mohl vypadat cíl nebo kroky (pokud nejsou zadané nebo jsou vágní)

Smíš číst soubory projektu (Read, Grep, Glob). Kromě souboru s poznámkami (viz níže) nic jiného nezapisuj — session je jinak jen pro diskusi.

Začni stručným shrnutím, co cíl fáze znamená, a pak se zeptej na to, co je nejasné nebo co považuješ za klíčové upřesnit.

# Poznámky z diskuse
Než session ukončíš, zapiš přes Write tool shrnutí diskuse do souboru \`.mini/discuss/phase-2.md\`. Teprve potom session ukonči.

Soubor musí mít tuto strukturu (názvy sekcí jsou fixní; jednotlivé sekce smí být prázdné nebo úplně chybět, pokud k nim není co napsat):

\`\`\`
# Fáze 2 — Bootstrap

## Záměr
## Klíčová rozhodnutí
## Pozor na
\`\`\`

Soubor slouží jako kontext pro následující kroky workflow (\`mini plan\`, \`mini do\`), které samotnou diskusi neuvidí. Piš věcně a stručně — jen to, co je pro další práci podstatné.
"
`;

exports[`buildDiscussPhasePrompt > renders phase with explicit goal 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **diskusní session** o nadcházející fázi — NEIMPLEMENTUJ nic.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Fáze k diskusi
**Fáze 3: Diskusní session**
Cíl: uživatel může prodiskutovat fázi před plánováním

# Tvůj úkol
Prodiskutuj s uživatelem záměr této fáze. Tvým cílem je:
- pochopit, co má fáze přesně řešit a proč
- upozornit na nejasnosti, skryté předpoklady nebo rizika
- navrhnout, jak by mohl vypadat cíl nebo kroky (pokud nejsou zadané nebo jsou vágní)

Smíš číst soubory projektu (Read, Grep, Glob). Kromě souboru s poznámkami (viz níže) nic jiného nezapisuj — session je jinak jen pro diskusi.

Začni stručným shrnutím, co cíl fáze znamená, a pak se zeptej na to, co je nejasné nebo co považuješ za klíčové upřesnit.

# Poznámky z diskuse
Než session ukončíš, zapiš přes Write tool shrnutí diskuse do souboru \`.mini/discuss/phase-3.md\`. Teprve potom session ukonči.

Soubor musí mít tuto strukturu (názvy sekcí jsou fixní; jednotlivé sekce smí být prázdné nebo úplně chybět, pokud k nim není co napsat):

\`\`\`
# Fáze 3 — Diskusní session

## Záměr
## Klíčová rozhodnutí
## Pozor na
\`\`\`

Soubor slouží jako kontext pro následující kroky workflow (\`mini plan\`, \`mini do\`), které samotnou diskusi neuvidí. Piš věcně a stručně — jen to, co je pro další práci podstatné.
"
`;

exports[`buildDiscussPhasePrompt > renders steps list when phase has steps 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **diskusní session** o nadcházející fázi — NEIMPLEMENTUJ nic.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Fáze k diskusi
**Fáze 7: Nová feature**
Cíl: feature je hotová

Kroky:
- [hotovo] připravit schéma
- [čeká] napsat handler
- [odloženo] starý nápad

# Tvůj úkol
Prodiskutuj s uživatelem záměr této fáze. Tvým cílem je:
- pochopit, co má fáze přesně řešit a proč
- upozornit na nejasnosti, skryté předpoklady nebo rizika
- navrhnout, jak by mohl vypadat cíl nebo kroky (pokud nejsou zadané nebo jsou vágní)

Smíš číst soubory projektu (Read, Grep, Glob). Kromě souboru s poznámkami (viz níže) nic jiného nezapisuj — session je jinak jen pro diskusi.

Začni stručným shrnutím, co cíl fáze znamená, a pak se zeptej na to, co je nejasné nebo co považuješ za klíčové upřesnit.

# Poznámky z diskuse
Než session ukončíš, zapiš přes Write tool shrnutí diskuse do souboru \`.mini/discuss/phase-7.md\`. Teprve potom session ukonči.

Soubor musí mít tuto strukturu (názvy sekcí jsou fixní; jednotlivé sekce smí být prázdné nebo úplně chybět, pokud k nim není co napsat):

\`\`\`
# Fáze 7 — Nová feature

## Záměr
## Klíčová rozhodnutí
## Pozor na
\`\`\`

Soubor slouží jako kontext pro následující kroky workflow (\`mini plan\`, \`mini do\`), které samotnou diskusi neuvidí. Piš věcně a stručně — jen to, co je pro další práci podstatné.
"
`;

exports[`buildDiscussPhasePrompt > uses graphMd instead of projectMd when provided 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **diskusní session** o nadcházející fázi — NEIMPLEMENTUJ nic.

# Projekt
# Graf projektu

## src/a.ts

Exports:
- function a(): number

# Fáze k diskusi
**Fáze 8: Discuss s grafem**
Cíl: diskuse vidí mapu projektu

# Tvůj úkol
Prodiskutuj s uživatelem záměr této fáze. Tvým cílem je:
- pochopit, co má fáze přesně řešit a proč
- upozornit na nejasnosti, skryté předpoklady nebo rizika
- navrhnout, jak by mohl vypadat cíl nebo kroky (pokud nejsou zadané nebo jsou vágní)

Smíš číst soubory projektu (Read, Grep, Glob). Kromě souboru s poznámkami (viz níže) nic jiného nezapisuj — session je jinak jen pro diskusi.

Začni stručným shrnutím, co cíl fáze znamená, a pak se zeptej na to, co je nejasné nebo co považuješ za klíčové upřesnit.

# Poznámky z diskuse
Než session ukončíš, zapiš přes Write tool shrnutí diskuse do souboru \`.mini/discuss/phase-8.md\`. Teprve potom session ukonči.

Soubor musí mít tuto strukturu (názvy sekcí jsou fixní; jednotlivé sekce smí být prázdné nebo úplně chybět, pokud k nim není co napsat):

\`\`\`
# Fáze 8 — Discuss s grafem

## Záměr
## Klíčová rozhodnutí
## Pozor na
\`\`\`

Soubor slouží jako kontext pro následující kroky workflow (\`mini plan\`, \`mini do\`), které samotnou diskusi neuvidí. Piš věcně a stručně — jen to, co je pro další práci podstatné.
"
`;
